# machine-learning

./: README.md  sync.sh
kaggle/: README.md
kaggle/spaceship/: pyproject.toml
spaceship/: spaceship-titanic.ipynb
spaceship/src/spaceship/: __init__.py
